Agregación páginas cv y cv_eng y modificaciones estéticas en index

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie-edge">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css" >
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <title>Nahuel Guerrero - Web Developer</title>
 </head>
 <body>
@@ -27,16 +28,16 @@
 
     <div class="row banner justify-content-center">
       <div class="banner-wrapper d-flex">
-        <h2 class="text-justify align-self-center text-nowrap ">&lt WEB DEVELOPER /&gt</h2>
+        <h2 class="text-justify align-self-center text-nowrap">&lt WEB DEVELOPER /&gt</h2>
       </div>
     </div>
 
-    <div class="row bg justify-content-center" style="background-color:#f44336;">
-      <div class="d-flex justify-content-center align-items-center col-12 col-md-10 col-lg-8 p-3">
-        <div class="row justify-content-around">
+    <div class="row justify-content-center" style="background-color:#f44336;">
+      <div class="d-flex justify-content-center align-items-center col-12 col-md-10 col-lg-8">
+        <div class="row justify-content-around align-items-center">
           <div class="col-12 col-md-7 col-lg-8 d-flex align-self-center justify-content-center">
-            <p class="text-center text-light presentacion-p">
-              Hola, soy <strong>Nahuel</strong> y soy <strong>programador</strong>. Me gusta desarrollar páginas web ya sea el <strong>front-end</strong> como el <strong>back-end</strong>  . Me gustaría que me conozcas.
+            <p class="text-center text-light presentacion-p p-3">
+              Hola, soy <strong>Nahuel</strong> y soy <strong>programador</strong>. Me gusta desarrollar páginas web ya sea el <strong>front-end</strong> como el <strong>back-end</strong>. Me gustaría que me conozcas.
             </p>
           </div>
           <div class="col-12 col-md-3 col-lg-2 d-flex align-self-center justify-content-center">
@@ -46,9 +47,9 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row bg-dark">
 
-      <div class="col-6 col-lg-3 box-card-1 d-flex justify-content-center align-items-center" onclick="location.href='http://naher-plast.com.ar';" style="cursor:pointer;background-image: url('./img/card-work.jpeg');">
+      <div class="col-6 col-lg-3 box-card-1 d-flex justify-content-center align-items-center" onclick="location.href='#';" style="cursor:pointer;background-image: url('./img/card-experience.jpg');">
         <div class="row">
           <div class="col-12 justify-content-center">
             <div class="row icono justify-content-center">
@@ -84,13 +85,13 @@
         </div>
       </div>
 
-      <div class="col-6 col-lg-3 box-card-1 d-flex justify-content-center align-items-center bg-secondary" onclick="location.href='#';" style="cursor:pointer;background-image: url('/img/card-studies.jpg');">
+      <div class="col-6 col-lg-3 box-card-1 d-flex justify-content-center align-items-center bg-secondary" onclick="location.href='#';" style="cursor:pointer;background-image: url('./img/card-work.jpeg');">
         <div class="row">
           <div class="col-12 justify-content-center">
             <div class="row icono justify-content-center">
               <p class="text-center">
-                <i class="fas fa-paint-brush"></i>&nbsp;&nbsp;<i class="fas fa-dice"></i><br>
-                <i class="fas fa-bicycle"></i>&nbsp;&nbsp;<i class="fas fa-film"></i>
+                <i class="fab fa-html5"></i>&nbsp;&nbsp;<i class="fab fa-css3-alt"></i><br>
+                <i class="fab fa-js-square"></i>&nbsp;<i class="fab fa-laravel"></i>
               </p>
             </div>
             <div class="row justify-content-center">
