Corrección de paginas de CVs y modificacion pdf para descarga

--- a/cv.html
+++ b/cv.html
@@ -201,6 +201,11 @@
               </ul>
             </div>
           </div>
+          <div class="row">
+            <div class="col text-center text-light" style="font-size:1.7em;">
+              <i class="fab fa-github"></i>&nbsp;&nbsp;<a href="https://github.com/wertedfrom" class="text-light" target="_blank">https://github.com/wertedfrom</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -235,7 +240,7 @@
       <div class="row align-items-center">
         <div class="col-6">2018 © Nahuel Guerrero</div>
         <div class="col-6 justify-content-end text-right">
-          <a href="pdf/Nahuel Guerrero CV.pdf" target="_blank" class="btn btn-danger text-light p-2">CV Versión Descargable <i class="fas fa-file-download"></i></a>
+          <a href="pdf/Nahuel Guerrero CV v. 3.2.pdf" target="_blank" class="btn btn-danger text-light p-2">CV Versión Descargable <i class="fas fa-file-download"></i></a>
         </div>
       </div>
     </footer>
