--- a/cv_eng.html
+++ b/cv_eng.html
@@ -60,7 +60,7 @@
             <h3><i class="fas fa-graduation-cap"></i>&nbsp;&nbsp;Education</h3>
             <ul style="list-style-type: circle;">
               <li><p><strong>Computer Systems Analyst</strong><br>ORT Technical Institute<br>2009 - 2012</p></li>
-              <li><p><strong>Bachelor with Specialisation in Economic Sciences</strong> <br>Instituto Ballester (Deutsche Schule) <br>2002 - 2004</p></li>
+              <li><p><strong>Bachelor with Specialization in Economic Sciences</strong> <br>Instituto Ballester (Deutsche Schule) <br>2002 - 2004</p></li>
             </ul>
             <h3><i class="fas fa-certificate"></i>&nbsp;&nbsp;Complementary training</h3>
             <ul style="list-style-type: circle;">
@@ -84,7 +84,7 @@
               <li>
                 <p><strong>FREELANCE</strong><br>
                   Mould Preparation and Machining Centers Programming (CNC) <br>
-                  Mould frames and holders preparation, plates grinding and squaring, coordinates setting of the piece's center, programm execution and subsequent mechanizing supervision<br>
+                  Mould frames and holders preparation, plates grinding and squaring, coordinates setting of the piece's center, programm execution and subsequent mechanizing supervision.<br>
                   July 2015 to Present
                 </p>
               </li>
@@ -96,14 +96,14 @@
                     <li>
                       <p>
                         Onsite Technical Support Team Leader of Production System <br>
-                        Personnel coordination, teaching of the production plant's processes and the tasks of the team's members, procedures documentation, survey of incidents casuistry and common solutions por the inmediate resolution, reassigning to the proper areas and notification to the management authorities in case of high severity <br>
+                        Personnel coordination, teaching of the production plant's processes and the tasks of the team's members, procedures documentation, survey of incidents casuistry and common solutions por the immediate resolution, reassigning to the proper areas and notification to the management authorities in case of high severity.<br>
                         June 2014 - July 2015
                       </p>
                     </li>
                     <li>
                       <p>
                         Onsite Tenical Support of Production System<br>
-                        Proprietary software support, hardware support (Data Capture Points, dot matrix and thermal printers, COTs, scanners, PCs), proprietary applications monitoring, incidents and service requests management trought ticket software (HP Service Manager/Peregrine), coding of productive documents in FORTRAN, end-user phone and face-to-face assistance and support. <br>
+                        Proprietary software support, hardware support (Data Capture Points, dot matrix and thermal printers, COTs, scanners, PCs), proprietary applications monitoring, incidents and service requests management trough ticket software (HP Service Manager/Peregrine), coding of productive documents in FORTRAN, end-user phone and face-to-face assistance and support. <br>
                         November 2013 - May 2014
                       </p>
                     </li>
@@ -114,15 +114,15 @@
                 <p>
                   <strong>FREELANCE</strong><br>
                   Technical Support<br>
-                  Operative systems maintenance, software installation, removal of virus and trojans, on site and remote Technical support<br>
+                  Operative systems maintenance, software installation, removal of virus and trojans, on site and remote technical support.<br>
                   August 2012 - October 2013
                 </p>
               </li>
               <li>
                 <p>
                   <strong>EVERIS, Multinational Software Consulting Company.</strong> <br>
-                  3rd Level LATAM Regional Support for Movistar
-                  Software support for different countries (Argentina, Chile, Ecuador and Uruguay), incidents resolution, code bugs correction, databases inconsistencies fix trought procedures and scripts, environments configuration, documentation generation.<br>
+                  3rd Level LATAM Regional Support for Movistar <br>
+                  Software support for different countries (Argentina, Chile, Ecuador and Uruguay), incidents resolution, code bugs correction, databases inconsistencies fix trough procedures and scripts, environments configuration, documentation generation.<br>
                   May 2011 - July 2012
                 </p>
               </li>
@@ -138,7 +138,7 @@
                 <p>
                   <strong>BAYER ARGENTINA S.A.</strong> <br>
                   Internship/Administrative trainee, Regulatory Affairs Department<br>
-                  Legalisation and renovation of television advertising, reception and verification of products in warehouse, monitoring of foreign trade operations<br>
+                  Legalization and renovation of television advertising, reception and verification of products in warehouse, monitoring of foreign trade operations.<br>
                   December 2003 - February 2004
                 </p>
               </li>
@@ -189,7 +189,7 @@
                 <li><i class="fas fa-plus-square"></i> Object-oriented programming</li>
                 <li><i class="fas fa-plus-square"></i> Functional Programming</li>
                 <li><i class="fas fa-plus-square"></i> Unified Modeling Language (UML)</li>
-                <li><i class="fas fa-plus-square"></i> SCRUM (Agile Sotfware Development)</li>
+                <li><i class="fas fa-plus-square"></i> SCRUM (Agile Software Development)</li>
               </ul>
             </div>
             <div class="col-6 col-md-2">
@@ -235,7 +235,7 @@
       <div class="row align-items-center">
         <div class="col-6">2018 © Nahuel Guerrero</div>
         <div class="col-6 justify-content-end text-right">
-          <a href="pdf/Nahuel Guerrero CV.pdf" target="_blank" class="btn btn-danger text-light p-2">CV Downloadable Version <i class="fas fa-file-download"></i></a>
+          <a href="pdf/Nahuel Guerrero CV v. 3.2 - English.pdf" target="_blank" class="btn btn-danger text-light p-2">CV Downloadable Version <i class="fas fa-file-download"></i></a>
         </div>
       </div>
     </footer>
